<resources>
    <string name="app_name">RosSeti</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="enter_data">Пожалуйста, введите свои учетные данные, чтобы продолжить.</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="sign_in">Войти</string>
</resources>